--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,6 +37,14 @@
         </form>
         <%= reply %>
     </div>
+    <!-- Footer -->
+    <footer class="page-footer font-small blue pt-4" style="position: relative; top: 80vh; ">
+        <div class="footer-copyright text-center py-3">Developed by
+            <a href="https://nikjos.in/" target="_blank">Nikhil Jose</a>
+            <br>For queries and suggestions, <a href="https://api.whatsapp.com/send?phone=918921277112">Contact</a>
+        </div>
+    </footer>
+    <!-- Footer -->
     <script async src="https://cdn.splitbee.io/sb.js"></script>
 </body>
 
